# Prep4Interview

./: .dockerignore  .env.example  .gitignore  DemoVideo  Dockerfile  Dockerfile.streamlit  INDEX.md  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
frontend/: app.py
graph/: __init__.py  agent.py  nodes.py  state.py
memory/: __init__.py  session_store.py
scripts/: main_menu.py
tests/: test_classifier.py
tools/: __init__.py  github_explainer.py  mock_interview.py  resume_analyzer.py  streaming_agent.py
